# AronaQuiz-backend-py

./: .gitignore  README.md  alembic.ini  pyproject.toml
data/: example.db  example_data.csv  example_data.json
src/alembic/: env.py  script.py.mako
src/alembic/versions/: 616755e38d99_init.py
src/app/: config.py  decos.py  main.py  typ.py
src/app/api/: __init__.py  deps.py
src/app/api/v1/: __init__.py  problem.py  session.py  sheet.py  stat.py  user.py
src/app/db/: core.py  decos.py  models.py  operations.py  utils.py
src/app/schemas/: _base.py  problem.py  request.py  response.py  sheet.py
src/app/utils/: decos.py  security.py  speedlimit.py  uuid7.py
tests/: conftest.py  test_api.py  test_db.py
