[project]
name = "hdusdp2-backend"
version = "0.1.0"
description = "HDU Software Dev Practice 2: Backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "sqlalchemy>=2.0.43",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "aiohttp>=3.12.15",
    "ipykernel>=6.16.2",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
show_column_numbers = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_calls = true
strict_equality = true
