[project]
name = "arona-quiz-backend"
version = "0.1.0"
description = "backend of Arona Quiz written in Python"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.116.1",
    "limits>=5.5.0",
    "sqlalchemy[aiosqlite,asyncio,postgresql-asyncpg]>=2.0.43",
    "sqlmodel>=0.0.24",
]
classifiers = ["Private :: Do Not Upload"]


[dependency-groups]
dev = [
    "ipykernel>=6.16.2",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "slowapi>=0.1.9",
]

[tool.mypy]
follow_imports = "normal"
ignore_missing_imports = true
show_column_numbers = true
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_redundant_casts = true
disallow_untyped_calls = true
strict_equality = true
